update project response

--- a/index.html
+++ b/index.html
@@ -87,13 +87,6 @@
     <main>
       <!-- Home -->
       <section id="home">
-        <section id="homeImg">
-          <img
-            src="assets\images\mainImage.jpg"
-            alt="Main Image"
-            data-aos="fade-left"
-          />
-        </section>
         <section id="homeMyName" data-aos="fade-right">
           <div class="text-box">
             <h1>I'm <span class="auto-type"></span></h1>
@@ -169,41 +162,54 @@
 
           <!-- Social Media End -->
         </section>
+
+        <section id="homeImg">
+          <img
+            src="assets\images\mainImage.jpg"
+            alt="Main Image"
+            data-aos="fade-left"
+          />
+        </section>
       </section>
 
       <!-- Home End -->
 
       <!-- About Me Start -->
+
       <section id="about">
-        <h1 data-aos="zoom-in" data-aos-duration="1500">
-          About <span>Me</span>
-        </h1>
-        <h5 data-aos="zoom-in" data-aos-duration="1500">Software Engineer</h5>
-
-        <p data-aos="zoom-in" data-aos-duration="1500">
-          Hello, I’m Kasun Umesh. I am currently an undergraduate computer
-          science student. I have a strong foundation in computer science
-          principles and am always looking to expand my knowledge. I am a quick
-          learner and not afraid to take on new challenges. I like to work
-          collaboratively in teams.
-        </p>
-
-        <div
-          class="buttonContact animate__animated animate__shakeX animate__infinite animate__slow"
-          data-aos="fade-left"
-        >
-          <a class="btn-1" href="#"
-            ><i class="fa-sharp fa-solid fa-circle-down"></i>Download CV</a
-          >
+        <div>
+          <img
+            id="aboutImg"
+            src="assets\images\About.png"
+            alt="About Image"
+            data-aos="fade-right"
+            class="animate__animated animate__pulse animate__infinite animate__slow"
+          />
         </div>
 
-        <img
-          id="aboutImg"
-          src="assets\images\About.png"
-          alt="About Image"
-          data-aos="fade-right"
-          class="animate__animated animate__pulse animate__infinite animate__slow"
-        />
+        <div>
+          <h1 data-aos="zoom-in" data-aos-duration="1500">
+            About <span>Me</span>
+          </h1>
+          <h5 data-aos="zoom-in" data-aos-duration="1500">Software Engineer</h5>
+
+          <p data-aos="zoom-in" data-aos-duration="1500">
+            Hello, I’m Kasun Umesh. I am currently an undergraduate computer
+            science student. I have a strong foundation in computer science
+            principles and am always looking to expand my knowledge. I am a
+            quick learner and not afraid to take on new challenges. I like to
+            work collaboratively in teams.
+          </p>
+
+          <div
+            class="buttonContact animate__animated animate__shakeX animate__infinite animate__slow"
+            data-aos="fade-left"
+          >
+            <a class="btn-1" href="#"
+              ><i class="fa-sharp fa-solid fa-circle-down"></i>Download CV</a
+            >
+          </div>
+        </div>
 
         <img
           id="about-two"
