--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <meta property="og:url" content="https://kasunumesh.github.io/MyProfile/" />
     <meta name="twitter:card" content="summary_large_image" />
 
+    <meta
+      name="keywords"
+      content="kasun, kasunumesh, Kasun Umesh, software development, software engineer"
+    />
+
+    <link rel="icon" type="image/x-icon" href="assets/images/logo4.png" />
+
     <!-- Page Style Import -->
     <link rel="stylesheet" href="assets/css/normalize.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -54,7 +61,7 @@
 
       <nav>
         <a href="index.html"
-          ><img src="assets/images/logo.png" alt="" width="50px"
+          ><img src="assets/images/logo3.png" alt="" width="50px"
         /></a>
         <div class="hamburger">
           <div class="line"></div>
