--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       property="og:description"
       content="Hello I am Kasun Umesh. A professional software engineer. Visit the website to know about me."
     />
-    <meta property="og:image" content="assets\images\Metadata.png" />
-    <meta property="og:url" content="https://kasunumesh.github.io/MyProfile/" />
+    <meta property="og:title" content="Kasun Umesh" />
+    <meta property="og:image" content="assets/images/logo4.png" />
+    <meta property="og:url" content="https://kasunumesh.info/" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <meta
